--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is FoolPenguin's Todo List</title>
+    <title>This is FoolPenguin's To-do List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>📝 FoolPenguin's Todo List</h1>
+        <h1>📝 FoolPenguin's To-do List</h1>
         
         <div class="input-container">
             <input type="text" id="todoInput" placeholder="Add a new todo..." />
